Fix: design overflow issue + font size of options

--- a/src/App.css
+++ b/src/App.css
@@ -2,51 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
-:root { font-family: 'Inter', sans-serif; }
+:root {
+  font-family: "Inter", sans-serif;
+
+  --animation-time: 3000ms;
+}
 @supports (font-variation-settings: normal) {
-  :root { font-family: 'Inter var', sans-serif; }
+  :root {
+    font-family: "Inter var", sans-serif;
+  }
 }
 
 #cube .front {
-  transform: 
-    translateZ(100px);
+  transform: translateZ(100px);
 }
 
 #cube .back {
-  transform: 
-    rotateX(-180deg)
-    translateZ(100px);
+  transform: rotateX(-180deg) translateZ(100px);
 }
 
 #cube .right {
-  transform:
-    rotateY(90deg)
-    translateZ(100px);
+  transform: rotateY(90deg) translateZ(100px);
 }
 
 #cube .left {
-  transform:
-    rotateY(-90deg)
-    translateZ(100px);
+  transform: rotateY(-90deg) translateZ(100px);
 }
 
 #cube .top {
-  transform:
-    rotateX(90deg)
-    translateZ(100px);
+  transform: rotateX(90deg) translateZ(100px);
 }
 
 #cube .bottom {
-  transform:
-    rotateX(-90deg)
-    translateZ(100px);
+  transform: rotateX(-90deg) translateZ(100px);
 }
 
 .container {
   width: 200px;
   height: 200px;
   position: relative;
-  
+
   perspective: 1000px;
   perspective-origin: 50% 100%;
 }
@@ -55,10 +50,10 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  
+
   transform-style: preserve-3d;
-  
-  transition: transform 1s;
+
+  transition: transform var(--animation-time);
 }
 
 #cube:hover {
@@ -72,9 +67,9 @@
   width: 200px;
   height: 200px;
   border: 2px solid hsl(52, 100%, 40%);
-  
-  margin: 0 auto;  
-  
+
+  margin: 0 auto;
+
   font-size: 500%;
   text-align: center;
   padding: 50px 0;
@@ -87,27 +82,90 @@
   height: 30px;
   background: rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 0 10px hsl(52, 100%, 30%);
-  border-radius: 15px;  
+  border-radius: 15px;
 }
 
-.front .dot1 { top: 85px; left: 85px; }
-.back .dot1 { top: 45px; left: 45px; }
-.back .dot2 { top: 125px; left: 125px; }
-.right .dot1 { top: 45px; left: 45px; }
-.right .dot2 { top: 85px; left: 85px; }
-.right .dot3 { top: 125px; left: 125px; }
-.left .dot1 { top: 45px; left: 45px; }
-.left .dot2 { top: 45px; left: 125px; }
-.left .dot3 { top: 125px; left: 45px; }
-.left .dot4 { top: 125px; left: 125px; }
-.top .dot1 { top: 45px; left: 45px; }
-.top .dot2 { top: 45px; left: 125px; }
-.top .dot3 { top: 85px; left: 85px; }
-.top .dot4 { top: 125px; left: 45px; }
-.top .dot5 { top: 125px; left: 125px; }
-.bottom .dot1 { top: 45px; left: 45px; }
-.bottom .dot2 { top: 45px; left: 85px; }
-.bottom .dot3 { top: 45px; left: 125px; }
-.bottom .dot4 { top: 125px; left: 45px; }
-.bottom .dot5 { top: 125px; left: 85px; }
-.bottom .dot6 { top: 125px; left: 125px; }
+.front .dot1 {
+  top: 85px;
+  left: 85px;
+}
+.back .dot1 {
+  top: 45px;
+  left: 45px;
+}
+.back .dot2 {
+  top: 125px;
+  left: 125px;
+}
+.right .dot1 {
+  top: 45px;
+  left: 45px;
+}
+.right .dot2 {
+  top: 85px;
+  left: 85px;
+}
+.right .dot3 {
+  top: 125px;
+  left: 125px;
+}
+.left .dot1 {
+  top: 45px;
+  left: 45px;
+}
+.left .dot2 {
+  top: 45px;
+  left: 125px;
+}
+.left .dot3 {
+  top: 125px;
+  left: 45px;
+}
+.left .dot4 {
+  top: 125px;
+  left: 125px;
+}
+.top .dot1 {
+  top: 45px;
+  left: 45px;
+}
+.top .dot2 {
+  top: 45px;
+  left: 125px;
+}
+.top .dot3 {
+  top: 85px;
+  left: 85px;
+}
+.top .dot4 {
+  top: 125px;
+  left: 45px;
+}
+.top .dot5 {
+  top: 125px;
+  left: 125px;
+}
+.bottom .dot1 {
+  top: 45px;
+  left: 45px;
+}
+.bottom .dot2 {
+  top: 45px;
+  left: 85px;
+}
+.bottom .dot3 {
+  top: 45px;
+  left: 125px;
+}
+.bottom .dot4 {
+  top: 125px;
+  left: 45px;
+}
+.bottom .dot5 {
+  top: 125px;
+  left: 85px;
+}
+.bottom .dot6 {
+  top: 125px;
+  left: 125px;
+}
